@@ -163,24 +163,29 @@ var procJSON = ( data, headers ) => {
   }
 
   var jsonResponse = JSON.parse(decdStr);
+  if ( typeof jsonResponse.htsget === 'undefined' ) {
+    throw new Error('Malformed JSON redirect, missing "htsget" as root field in: ' +
+                    JSON.stringify(jsonResponse));
+  }
+  var htsget       = jsonResponse.htsget;
   var uris         = [];
   var headers4uris = [];
 
   var prefix;
   var suffix;
 
-  for (let i = 0; i < jsonResponse.urls.length; i++ ) {
+  for (let i = 0; i < htsget.urls.length; i++ ) {
     let uri;
-    if ( jsonResponse.urls[i].url ) {
-      uri = jsonResponse.urls[i].url;
-      if ( jsonResponse.urls[i].headers ) {
+    if ( htsget.urls[i].url ) {
+      uri = htsget.urls[i].url;
+      if ( htsget.urls[i].headers ) {
 
         // Merge headers, give priority to new headers provided
-        headers = _mergeHeaders(jsonResponse.urls[i].headers, headers);
+        headers = _mergeHeaders(htsget.urls[i].headers, headers);
       }
     } else {
       throw new Error( 'Malformed JSON redirect, missing url field in: ' +
-                       JSON.stringify(jsonResponse.urls[i]) );
+                       JSON.stringify(htsget.urls[i]) );
     }
     uris[i] = uri;
     headers4uris[i] = headers;
