@@ -382,9 +382,12 @@ class RangerController {
       let serverUrl = query[RANGER_PROXY_URL_KEY] ?
         query[RANGER_PROXY_URL_KEY] :
         this._serverUrlFromRequest();
-      let reply = {};
-      reply.urls   = [{url: serverUrl + url}];
-      reply.format = query.format;
+      let reply = {
+        htsget: {
+          urls: [{url: serverUrl + url}],
+          format: query.format
+        }
+      };
       let redirect = JSON.stringify(reply);
       LOGGER.debug('JSON produced ' + redirect);
       this.response.removeHeader('Transfer-Encoding');
