@@ -79,8 +79,10 @@ class HttpError {
    */
   setErrorResponse() {
     let jerr = JSON.stringify({
-      error:   this.errorType,
-      message: this.message
+      htsget: {
+        error:   this.errorType,
+        message: this.message
+      }
     });
     this.response.removeHeader('Transfer-Encoding');
     this.response.writeHead(this.code, this.message, {
