@@ -270,9 +270,11 @@ const procjson = require('../../lib/client/rangerRequest').procJSON;
 describe('JSON processing', () => {
   describe('Positives', () => {
     let json = JSON.stringify({
-      format: 'BAM',
-      urls:   [],
-      md5:    'randommd5'
+      htsget: {
+        format: 'BAM',
+        urls:   [],
+        md5:    'randommd5'
+      }
     });
 
     it('returns empty lists when there are no urls', () => {
@@ -289,7 +291,7 @@ describe('JSON processing', () => {
 
     it('returns individual uris for each element in json', () =>{
       let json2 = JSON.parse(json);
-      json2.urls = [ {url:'url1'}, {url:'url2'}, {url:'url3'} ];
+      json2.htsget.urls = [ {url:'url1'}, {url:'url2'}, {url:'url3'} ];
       let res = procjson(JSON.stringify(json2));
       expect(res.uris).toBeDefined();
       expect(res.uris.length).toEqual(3);
@@ -300,7 +302,7 @@ describe('JSON processing', () => {
 
     it('returns an uri with headers', () => {
       let json2 = JSON.parse(json);
-      json2.urls = [{
+      json2.htsget.urls = [{
         url:'url1',
         headers: {
           "Range":         "bytes=0-1023",
@@ -322,10 +324,31 @@ describe('JSON processing', () => {
   });
 
   describe('Fails', () => {
+    describe('Missing htsget root element in JSON', () => {
+      it('complains when there is missing "htsget" root element missing', () => {
+        let json = JSON.stringify({
+          format: 'BAM',
+          urls: [{
+            url: 'url1',
+            headers: {
+              "Range":         "bytes=0-1023",
+              "Authorization": "Bearer xxxx"
+            }
+          }],
+          md5: 'randommd5'
+        });
+        expect(() => {
+          procjson(json);
+        }).toThrowError(/^Malformed JSON redirect, missing "htsget" as root field/);
+      });
+    });
+
     describe('Malformed urls', () => {
       it('complains about malformed urls field', () => {
         let json = JSON.stringify({
-          urls: [ 'something' ]
+          htsget: {
+            urls: [ 'something' ]
+          }
         });
         expect(() => {
           procjson(json);
@@ -333,7 +356,9 @@ describe('JSON processing', () => {
       });
       it('complains about empty objects in urls', () => {
         let json = JSON.stringify({
-          urls: [{}]
+          htsget: {
+            urls: [{}]
+          }
         });
         expect(() => {
           procjson(json);
@@ -341,12 +366,14 @@ describe('JSON processing', () => {
       });
       it('complains when only headers', () => {
         let json = JSON.stringify({
-          urls: [{
-            headers: {
-              "Range":         "bytes=0-1023",
-              "Authorization": "Bearer xxxx"
-            }
-          }]
+          htsget: {
+            urls: [{
+              headers: {
+                "Range":         "bytes=0-1023",
+                "Authorization": "Bearer xxxx"
+              }
+            }]
+          }
         });
         expect(() => {
           procjson(json);
